# Turtle-Insight

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  ti.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
claude/prompts/: auto-build.md  build-sequence.md
docs/: BUILD-STATUS.md  ROADMAP.md  TDD.md
docs/adr/: README.md
docs/guidelines/: engineering.md  thesis-and-epistemics.md
docs/reviews/: 2026-06-09-product-review-ph-readiness.md
src/turtle_insight/: __init__.py
src/turtle_insight/agents/: allocator.py  analyst.py  base.py  curator.py  macro.py  market.py  redteam.py  scout.py  strategist.py  synthesizer.py  templates.py
src/turtle_insight/api/: app.py
src/turtle_insight/config/: settings.py
src/turtle_insight/connectors/: base.py  dart.py  edgar.py  fred.py  krx.py  live.py  market_api.py  news.py
src/turtle_insight/connectors/fixtures/: dart.json  edgar.json  fred.json  market_api.json  news.json
src/turtle_insight/domain/: calibration.py  proposal.py  signal.py  state.py  thesis.py
src/turtle_insight/services/: advisory.py  embedding.py  inference.py  llm_clients.py  orchestrator.py  pipeline.py  rag_index.py  reporting.py  validation.py
src/turtle_insight/storage/: files.py  rag.py  repository.py  sql_models.py  sqlite_repo.py  sync.py
src/turtle_insight/viewer/: app.py  render.py
tests/evals/: test_advisory_discipline.py  test_full_graph.py  test_placeholder.py  test_seed_pipeline.py
tests/integration/: test_api.py  test_calibration_store.py  test_pipeline.py  test_placeholder.py  test_postgres.py  test_scout.py  test_storage.py
tests/unit/: test_allocator.py  test_analyst.py  test_calibration.py  test_connectors_live.py  test_curator.py  test_domain.py  test_embedding.py  test_inference.py  test_layer_agents.py  test_llm_clients.py  test_redteam.py  test_scorecard.py  test_smoke.py  test_state.py  test_synthesizer.py  test_validation.py  test_viewer_render.py
theses/examples/: T-2026-0003.yaml
turtle-insight/: CLAUDE.md  README.md
turtle-insight/docs/: PRD.md  ROADMAP.md  SDD.md
turtle-insight/schema/: thesis.schema.yaml
