[project]
name = "turtle-insight"
version = "0.1.0"
description = "Local thesis-graph investment research agent (decision support, no trade execution)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "sqlalchemy>=2.0",
    # Live connectors (EDGAR/FRED, ADR-0010); also used by the optional extras.
    "httpx>=0.27",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
viewer = [
    "streamlit>=1.36",
]
pg = [
    # PostgreSQL driver (SQLAlchemy uses it via the postgresql+psycopg URL).
    # The pgvector extension is provided by the database image (pgvector/pgvector).
    "psycopg[binary]>=3.2",
]
llm = [
    # Concrete inference clients (services/llm_clients.py); injected into the gate.
    "anthropic>=0.40",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.22",
    # API is a core MVP surface: keep it available for type-checking and tests.
    "fastapi>=0.111",
    "httpx>=0.27",
    "alembic>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/turtle_insight"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["alembic"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "W", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
files = ["src/turtle_insight"]
plugins = ["pydantic.mypy"]

# Streamlit is a viewer-only extra (not installed for lint/test); treat as untyped.
[[tool.mypy.overrides]]
module = ["streamlit", "streamlit.*"]
ignore_missing_imports = true

# Anthropic SDK is an optional llm extra, imported lazily; treat as untyped.
[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["src"]
